advanced/02.service-mesh/istio-manifests/vs-split-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: productcatalogservice.default.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: productcatalogservice.default.svc.cluster.local
        subset: v2
      weight: 50
